--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <h1>Contact Me</h1>
@@ -11,7 +12,7 @@
     <p><a href="https://www.instagram.com/cyrusbaebae/?hl=en">Instagram</a></p>
     <p><a href="https://twitter.com/cyrusbaebae">Twitter</a></p>
     <p><a href="https://www.linkedin.com/in/cyrus-baybay-69a809175/">Linkedin</a></p>
-    <p><u><a href="index.html">Go Back</a></u></p>
+
 
     <form action="mailto:cyrusb10@gmail.com" method="post" enctype="text/plain">
       <label>Your Name: </label>
@@ -20,8 +21,10 @@
       <input type="email" name="yourEmail" value=""><br>
       <label>Your Message: </label><br>
       <textarea name="yourMessage" rows="10" cols="30"></textarea><br>
-      <input type="submit" name="">
+      <input type="submit" name=""><br>
     </form>
+
+    <p><u><a href="index.html">Go Back</a></u></p>
 
   </body>
 </html>
